--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "multer": "^1.4.4",
+    "socket.io": "^4.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
